--- a/src/catalog.html
+++ b/src/catalog.html
@@ -131,36 +131,36 @@
                     <div class="uk-accordion-content">
                       <ul class="filter__checkbox">
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f1" name="f1" checked="">
-                          <label for="f1">iPhone Xs <span>(9)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model1" name="model" checked="">
+                          <label for="model1">iPhone Xs <span>(9)</span></label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f2" name="f2">
-                          <label for="f2">iPhone Xs Max <span>(19)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model2" name="model">
+                          <label for="model2">iPhone Xs Max <span>(19)</span></label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f3" name="f3">
-                          <label for="f3">iPhone Xr <span>(36)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model3" name="model">
+                          <label for="model3">iPhone Xr <span>(36)</span></label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f4" name="f4">
-                          <label for="f4">iPhone X <span>(14)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model4" name="model">
+                          <label for="model4">iPhone X <span>(14)</span></label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f5" name="f5">
-                          <label for="f5">iPhone 8 <span>(10)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model5" name="model">
+                          <label for="model5">iPhone 8 <span>(10)</span></label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f6" name="f6">
-                          <label for="f6">iPhone 8 <span>(10)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model6" name="model">
+                          <label for="model6">iPhone 8 <span>(10)</span></label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f7" name="f7">
-                          <label for="f7">iPhone 8 <span>(10)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model7" name="model">
+                          <label for="model7">iPhone 8 <span>(10)</span></label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="f8" name="f8">
-                          <label for="f8">iPhone 8 <span>(10)</span></label>
+                          <input class="uk-hidden" type="checkbox" id="model8" name="model">
+                          <label for="model8">iPhone 8 <span>(10)</span></label>
                         </li>
                       </ul>
                       <button class="filter__btn-see-all uk-margin-top" type="button"
@@ -174,16 +174,16 @@
                     <div class="uk-accordion-content">
                       <ul class="filter__memory uk-flex uk-flex-between uk-flex-wrap uk-flex-middle">
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="m1" name="m1">
-                          <label for="m1">64 Gb</label>
+                          <input class="uk-hidden" type="checkbox" id="memory1" name="memory">
+                          <label for="memory1">64 Gb</label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="m2" name="m2" checked="">
-                          <label for="m2">256 Gb</label>
+                          <input class="uk-hidden" type="checkbox" id="memory2" name="memory" checked="">
+                          <label for="memory2">256 Gb</label>
                         </li>
                         <li>
-                          <input class="uk-hidden" type="checkbox" id="m3" name="m3">
-                          <label for="m3">512 Gb</label>
+                          <input class="uk-hidden" type="checkbox" id="memory3" name="memory">
+                          <label for="memory3">512 Gb</label>
                         </li>
                       </ul>
                     </div>
@@ -193,45 +193,45 @@
                     <a class="uk-accordion-title" href="#">Цвет</a>
                     <div class="uk-accordion-content">
                       <ul class="filter__colors uk-flex uk-flex-middle uk-child-width-1-6 uk-grid-small" data-uk-grid>
-                        <li class="filter__color filter__color--black">
-                          <input class="uk-hidden" type="checkbox" id="c1" name="c1" checked="">
-                          <label for="c1"></label>
-                        </li>
                         <li class="filter__color filter__color--orange">
-                          <input class="uk-hidden" type="checkbox" id="c2" name="c2">
-                          <label for="c2"></label>
+                          <input class="uk-hidden" type="checkbox" id="color1" name="color" checked="">
+                          <label for="color1"></label>
+                        </li>
+                        <li class="filter__color filter__color--black">
+                          <input class="uk-hidden" type="checkbox" id="color2" name="color">
+                          <label for="color2"></label>
                         </li>
                         <li class="filter__color filter__color--violet">
-                          <input class="uk-hidden" type="checkbox" id="c3" name="c3">
-                          <label for="c3"></label>
+                          <input class="uk-hidden" type="checkbox" id="color3" name="color">
+                          <label for="color3"></label>
                         </li>
                         <li class="filter__color filter__color--white">
-                          <input class="uk-hidden" type="checkbox" id="c4" name="c4">
-                          <label for="c4"></label>
+                          <input class="uk-hidden" type="checkbox" id="color4" name="color">
+                          <label for="color4"></label>
                         </li>
                         <li class="filter__color filter__color--turquoise">
-                          <input class="uk-hidden" type="checkbox" id="c5" name="c5">
-                          <label for="c5"></label>
+                          <input class="uk-hidden" type="checkbox" id="color5" name="c5">
+                          <label for="color5"></label>
                         </li>
                         <li class="filter__color filter__color--pearl">
-                          <input class="uk-hidden" type="checkbox" id="c6" name="c6">
-                          <label for="c6"></label>
+                          <input class="uk-hidden" type="checkbox" id="color6" name="color">
+                          <label for="color6"></label>
                         </li>
                         <li class="filter__color filter__color--gray">
-                          <input class="uk-hidden" type="checkbox" id="c7" name="c7">
-                          <label for="c7"></label>
+                          <input class="uk-hidden" type="checkbox" id="color7" name="color">
+                          <label for="color7"></label>
                         </li>
                         <li class="filter__color filter__color--blue">
-                          <input class="uk-hidden" type="checkbox" id="c8" name="c8">
-                          <label for="c8"></label>
+                          <input class="uk-hidden" type="checkbox" id="color8" name="color">
+                          <label for="color8"></label>
                         </li>
                         <li class="filter__color filter__color--green">
-                          <input class="uk-hidden" type="checkbox" id="c9" name="c9">
-                          <label for="c9"></label>
+                          <input class="uk-hidden" type="checkbox" id="color9" name="color">
+                          <label for="color9"></label>
                         </li>
                         <li class="filter__color filter__color--red">
-                          <input class="uk-hidden" type="checkbox" id="c10" name="c10">
-                          <label for="c10"></label>
+                          <input class="uk-hidden" type="checkbox" id="color10" name="color">
+                          <label for="color10"></label>
                         </li>
                       </ul>
                     </div>
