feature: adds edits

--- a/src/product.html
+++ b/src/product.html
@@ -46,7 +46,7 @@
                   </svg>
                 </li>
               </ul>
-              <a class="product__link" href="#">1 отзыв</a>
+              <a href="#" class="product__link">1 отзыв</a>
             </div>
           </div>
         </div>
@@ -491,8 +491,8 @@
         </div>
       </li> -->
 
-      <li class="product__reviews uk-open">
-        <a class="uk-accordion-title" href="#">Отзывы</a>
+      <li class="product__reviews">
+        <a id="product-reviews" class="uk-accordion-title" href="#">Отзывы</a>
         <div class="uk-accordion-content">
           <div class="reviews__content">
             <div class="uk-flex uk-flex-between">
@@ -707,7 +707,7 @@
         </div>
       </li>
 
-      <li class="product__description">
+      <li class="product__description uk-open">
         <a class="uk-accordion-title" href="#">Описание товара</a>
         <div class="uk-accordion-content">
           //= components/descriptions/description--iphone11pro.html
