feature: adds script for presents, adds style for danger text in validation

--- a/src/product.html
+++ b/src/product.html
@@ -146,24 +146,24 @@
               <span class="checkout__container-title uk-margin-small-bottom uk-padding-left@s">Выберите 2 подарка</span>
               <ul class="product__present uk-flex">
                 <li>
-                  <input id="v1" class="uk-hidden" type="radio" name="v" checked>
-                  <label for="v1">
+                  <input id="v1" class="uk-hidden" type="checkbox" name="v">
+                  <label class="product__present-label" for="v1">
                     <img src="img/temp/product-present-1.svg" width="22" height="41" alt="">
                     <span>Защитное стекло</span>
                   </label>
                 </li>
 
                 <li>
-                  <input id="v2" class="uk-hidden" type="radio" name="v" checked>
-                  <label for="v2">
+                  <input id="v2" class="uk-hidden" type="checkbox" name="v">
+                  <label class="product__present-label" for="v2">
                     <img src="img/temp/product-present-2.svg" width="28" height="41" alt="">
                     <span>Чехол</span>
                   </label>
                 </li>
 
                 <li>
-                  <input id="v3" class="uk-hidden" type="radio" name="v" checked>
-                  <label for="v3">
+                  <input id="v3" class="uk-hidden" type="checkbox" name="v">
+                  <label class="product__present-label" for="v3">
                     <img src="img/temp/product-present-3.svg" width="30" height="34" alt="">
                     <span>Скидка</span>
                   </label>
