fix: changes styles for account-main link

--- a/src/account-main.html
+++ b/src/account-main.html
@@ -40,7 +40,7 @@
                 <span class="account__container-title">Моя корзина</span>
                 <span>1 товар</span>
               </div>
-              <a class="account__container-link uk-visible@l" href="#">Подробнее</a>
+              <a class="account__container-link uk-visible@l" href="#">Продолжить оформление заказа</a>
             </div>
             <ul class="account__container-right uk-width-expand@l">
               <li class="uk-flex uk-flex-between">
@@ -61,7 +61,7 @@
                 <span class="account__container-title">Мои заказы</span>
                 <span>В процессе: 2</span>
               </div>
-              <a class="account__container-link uk-visible@l" href="#">Подробнее</a>
+              <a class="account__container-link uk-visible@l" href="#">Продолжить оформление заказа</a>
             </div>
             <ul class="account__container-right uk-width-expand@l">
               <li>
