fix: adds eddits

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -126,7 +126,7 @@
               </div>
               <div class="filter uk-margin-large-bottom@l">
                 <ul class="accordion" uk-accordion="multiple: true">
-                  <li class="uk-margin-small-bottom">
+                  <li class="uk-margin-small-bottom uk-open">
                     <a class="uk-accordion-title" href="#">Модель</a>
                     <div class="uk-accordion-content">
                       <ul class="filter__checkbox">
@@ -169,7 +169,7 @@
                     </div>
                   </li>
 
-                  <li class="uk-margin-small-bottom">
+                  <li class="uk-margin-small-bottom uk-open">
                     <a class="uk-accordion-title" href="#">Объем памяти</a>
                     <div class="uk-accordion-content">
                       <ul class="filter__memory uk-flex uk-flex-between uk-flex-wrap uk-flex-middle">
@@ -189,7 +189,7 @@
                     </div>
                   </li>
 
-                  <li class="uk-margin-small-bottom">
+                  <li class="uk-margin-small-bottom uk-open">
                     <a class="uk-accordion-title" href="#">Цвет</a>
                     <div class="uk-accordion-content">
                       <ul class="filter__colors uk-flex uk-flex-middle uk-child-width-1-6 uk-grid-small" data-uk-grid>
@@ -237,7 +237,7 @@
                     </div>
                   </li>
 
-                  <li class="uk-margin-small-bottom">
+                  <li class="uk-margin-small-bottom uk-open">
                     <a class="uk-accordion-title" href="#">Количество SIM</a>
                     <div class="uk-accordion-content">
                       123
