--- a/src/checkout.html
+++ b/src/checkout.html
@@ -383,7 +383,7 @@
 
             <div class="checkout__checkbox">
               <input class="uk-hidden" type="checkbox" id="f2" name="f2" checked>
-              <label for="f2">Согласен с правилами обработки персональных данных</label>
+              <label for="f2">Согласен с <a href="#">правилами</a> обработки персональных данных</label>
             </div>
 
             <button class="btn checkout__btn uk-margin-bottom">Оформить заказ</button>
