--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,27 @@
           <p>Лучшая цена на iPhone 11 Pro и Pro Max</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
-          <img src="img/pic/bg/main-banner-mobile.jpg" alt="">
+          <picture>
+            <img src="img/pic/bg/main-banner-mobile.jpg" alt="">
+          </picture>
         </li>
 
         <li class="swiper-slide slide-2">
           <p>AirPods Pro Просто вошлебно. Как никогда.</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
-          <img src="img/pic/bg/main-banner-2.jpg" alt="">
+          <picture>
+            <img src="img/pic/bg/main-banner-2.jpg" alt="">
+          </picture>
         </li>
 
         <li class="swiper-slide slide-3">
           <p>Apple Watch Series 5</p>
           <p>В Санкт-Петербурге. Предзаказ. Лучшая цена.</p>
           <a href="#" class="btn">Подробнее</a>
-          <img src="img/pic/bg/main-banner-3.jpg" alt="">
+          <picture>
+            <img src="img/pic/bg/main-banner-3.jpg" alt="">
+          </picture>
         </li>
 
         <li class="swiper-slide slide-4">
