feature: adds personal data for contacts

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -117,7 +117,7 @@
                   </li>
                 </ul>
               </li>
-              
+
               <li>
                 <iframe class="contacts__map"
                   src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d53787.65773638526!2d30.337858222679674!3d59.93387135736224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1562672617310!5m2!1sru!2sru"
@@ -185,7 +185,18 @@
         </li>
       </ul>
     </div>
+
+    <div class="frame uk-margin-top">
+      <div class="contacts__personal-data">
+        <h2 class="title title--medium uk-margin-bottom">Реквизиты</h2>
+        <p>ООО «ОРЛАН»</p>
+        <p>ОГРН 1197746596332</p>
+        <p>ИНН/КПП 7720483322</p>
+      </div>
+    </div>
   </div>
+
+
 
 
   //= components/subscribe.html
