feature: adds info for section contacts-persona-data

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -191,13 +191,12 @@
         <h2 class="title title--medium uk-margin-bottom">Реквизиты</h2>
         <p>ООО «ОРЛАН»</p>
         <p>ОГРН 1197746596332</p>
-        <p>ИНН/КПП 7720483322</p>
+        <p class="uk-margin-small-bottom">ИНН/КПП 7720483322</p>
+
+        <p>По всем юридическим вопросам пишите на <a href="mailto:info@spb-retail.ru">info@spb-retail.ru</a></p>
       </div>
     </div>
   </div>
-
-
-
 
   //= components/subscribe.html
   //= components/footer.html
