fix: remove slider for checkkout accessories

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -115,107 +115,104 @@
         </ul>
 
         <span class="checkout__container-subtitle">Не забудьте добавить аксессуары:</span>
-        <!-- Swiper -->
-        <div class="checkout__swiper">
-          <ul class="swiper-wrapper uk-child-width-1-2@l">
-            <li class="swiper-slide">
-              <div
-                class="product-card product-card--accessories product-card--accessories product-card--active uk-flex">
-                <a class="product-card__image" href="#">
-                  <img src="img/temp/product-card-accessories.jpg" alt="">
-                </a>
-                <div class="uk-flex uk-flex-column uk-width-expand">
-                  <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
-                    Series 4, 44 мм</a>
-                  <div class="uk-flex uk-flex-between uk-flex-column">
 
-                    <div class="product-card__price uk-flex uk-flex-column">
-                      <div class="uk-flex uk-flex uk-flex-middle">
-                        <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
-                        <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
-                      </div>
-                      <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
+        <ul class="checkout__accessories uk-child-width-1-2@l">
+          <li>
+            <div class="product-card product-card--accessories product-card--accessories product-card--active uk-flex">
+              <a class="product-card__image" href="#">
+                <img src="img/temp/product-card-accessories.jpg" alt="">
+              </a>
+              <div class="uk-flex uk-flex-column uk-width-expand">
+                <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
+                  Series 4, 44 мм</a>
+                <div class="uk-flex uk-flex-between uk-flex-column">
+
+                  <div class="product-card__price uk-flex uk-flex-column">
+                    <div class="uk-flex uk-flex uk-flex-middle">
+                      <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
+                      <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
                     </div>
-
-                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавлено</button>
+                    <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                   </div>
+
+                  <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавлено</button>
                 </div>
               </div>
-            </li>
+            </div>
+          </li>
 
-            <li class="swiper-slide">
-              <div class="product-card product-card--accessories uk-flex">
-                <a class="product-card__image" href="#">
-                  <img src="img/temp/product-card-accessories.jpg" alt="">
-                </a>
-                <div class="uk-flex uk-flex-column uk-width-expand">
-                  <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
-                    Series 4, 44 мм</a>
-                  <div class="uk-flex uk-flex-between uk-flex-column">
+          <li>
+            <div class="product-card product-card--accessories uk-flex">
+              <a class="product-card__image" href="#">
+                <img src="img/temp/product-card-accessories.jpg" alt="">
+              </a>
+              <div class="uk-flex uk-flex-column uk-width-expand">
+                <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
+                  Series 4, 44 мм</a>
+                <div class="uk-flex uk-flex-between uk-flex-column">
 
-                    <div class="product-card__price uk-flex uk-flex-column">
-                      <div class="uk-flex uk-flex uk-flex-middle">
-                        <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
-                        <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
-                      </div>
-                      <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
+                  <div class="product-card__price uk-flex uk-flex-column">
+                    <div class="uk-flex uk-flex uk-flex-middle">
+                      <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
+                      <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
                     </div>
-
-                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
+                    <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                   </div>
+
+                  <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
                 </div>
               </div>
-            </li>
+            </div>
+          </li>
 
-            <li class="swiper-slide">
-              <div class="product-card product-card--accessories uk-flex">
-                <a class="product-card__image" href="#">
-                  <img src="img/temp/product-card-accessories.jpg" alt="">
-                </a>
-                <div class="uk-flex uk-flex-column uk-width-expand">
-                  <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
-                    Series 4, 44 мм</a>
-                  <div class="uk-flex uk-flex-between uk-flex-column">
+          <li>
+            <div class="product-card product-card--accessories uk-flex">
+              <a class="product-card__image" href="#">
+                <img src="img/temp/product-card-accessories.jpg" alt="">
+              </a>
+              <div class="uk-flex uk-flex-column uk-width-expand">
+                <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
+                  Series 4, 44 мм</a>
+                <div class="uk-flex uk-flex-between uk-flex-column">
 
-                    <div class="product-card__price uk-flex uk-flex-column">
-                      <div class="uk-flex uk-flex uk-flex-middle">
-                        <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
-                        <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
-                      </div>
-                      <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
+                  <div class="product-card__price uk-flex uk-flex-column">
+                    <div class="uk-flex uk-flex uk-flex-middle">
+                      <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
+                      <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
                     </div>
-
-                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
+                    <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                   </div>
+
+                  <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
                 </div>
               </div>
-            </li>
+            </div>
+          </li>
 
-            <li class="swiper-slide">
-              <div class="product-card product-card--accessories uk-flex">
-                <a class="product-card__image" href="#">
-                  <img src="img/temp/product-card-accessories.jpg" alt="">
-                </a>
-                <div class="uk-flex uk-flex-column uk-width-expand">
-                  <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
-                    Series 4, 44 мм</a>
-                  <div class="uk-flex uk-flex-between uk-flex-column">
+          <li>
+            <div class="product-card product-card--accessories uk-flex">
+              <a class="product-card__image" href="#">
+                <img src="img/temp/product-card-accessories.jpg" alt="">
+              </a>
+              <div class="uk-flex uk-flex-column uk-width-expand">
+                <a href="#" class="product-card__name uk-width-3-4@s">Apple Watch
+                  Series 4, 44 мм</a>
+                <div class="uk-flex uk-flex-between uk-flex-column">
 
-                    <div class="product-card__price uk-flex uk-flex-column">
-                      <div class="uk-flex uk-flex uk-flex-middle">
-                        <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
-                        <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
-                      </div>
-                      <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
+                  <div class="product-card__price uk-flex uk-flex-column">
+                    <div class="uk-flex uk-flex uk-flex-middle">
+                      <span class="product-card__price-old">97&nbsp;990&nbsp;&#8381;</span>
+                      <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
                     </div>
-
-                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
+                    <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                   </div>
+
+                  <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
                 </div>
               </div>
-            </li>
-          </ul>
-        </div>
+            </div>
+          </li>
+        </ul>
       </div>
 
       <div class="checkout__frame-wrap">
